--- a/tea cozy/index.html
+++ b/tea cozy/index.html
@@ -25,8 +25,7 @@
     <div id="mission" class="flex-container">
     <div class="content">
         <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, 
-            Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
 </div>
 
